# RMD

./: LICENSE  README.md  pyproject.toml
src/rmd_firstlook/: __init__.py  cli.py  core.py
